css fix for aligning nested nav menu items
git-svn-id: https://plugins.svn.wordpress.org/thrivehive/trunk@1135670 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/custom_style.css
+++ b/css/custom_style.css
@@ -88,6 +88,14 @@ body .sugar-slider {
 	float: right;
 }
 
+/*****************************************
+*  Fix For Aigning Nested Nav Menu Items *
+*****************************************/
+
+.nav-primary .sub-menu .sub-menu, .menu-primary li ul ul, .genesis-nav-menu .sub-menu .sub-menu, #nav li ul ul {
+	top: 0px;
+}
+
 /************************************
 *       Adorable                    *
 *************************************/
